Increased the z-index of the navbar to prevent other elements from overlapping with it.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2925,7 +2925,7 @@
 		text-align: right;
 		top: 2em;
 		width: 100%;
-		z-index: 10001;
+		z-index: 10009;
 		-moz-transition: background-color 0.2s ease-in-out;
 		-webkit-transition: background-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out;
